syntax = "proto3";

package inventory;

option go_package = "inventory-service/pb";

service InventoryService {
    rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
    rpc GetProduct(GetProductRequest) returns (ProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (Empty);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    string category = 6;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    int32 stock = 4;
    string category = 5;
}

message GetProductRequest {
    string id = 1;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    string category = 6;
}

message DeleteProductRequest {
    string id = 1;
}

message ListProductsRequest {
    int32 skip = 1;
    int32 limit = 2;
}

message ProductResponse {
    Product product = 1;
}

message ListProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
}

message Empty {}